@@ -1,0 +1,12 @@
+<background>
+  <static>
+    <duration>8640000.0</duration>
+    <file>
+      <size width="1280" height="1024">/usr/share/images/desktop-base/lines-wallpaper_1280x1024.svg</size>
+      <size width="1600" height="1200">/usr/share/images/desktop-base/lines-wallpaper_1600x1200.svg</size>
+      <size width="1920" height="1080">/usr/share/images/desktop-base/lines-wallpaper_1920x1080.svg</size>
+      <size width="1920" height="1200">/usr/share/images/desktop-base/lines-wallpaper_1920x1200.svg</size>
+      <size width="2560" height="1080">/usr/share/images/desktop-base/lines-wallpaper_2560x1080.svg</size>
+    </file>
+  </static>
+</background>
