@@ -6,8 +6,8 @@ set -e
 if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ]; then
     # remove background alternatives
     for background in \
-          lines-wallpaper_1280_1024.svg \
-          lines-wallpaper_1600_1200.svg \
+          lines-wallpaper_1280x1024.svg \
+          lines-wallpaper_1600x1200.svg \
           lines-wallpaper_1920x1080.svg \
           lines-wallpaper_1920x1200.svg \
           lines-wallpaper_2560x1080.svg \
@@ -26,7 +26,13 @@ if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ]; then
           ; do
         update-alternatives --remove desktop-background /usr/share/images/desktop-base/$background
     done
-    update-alternatives --remove desktop-background.xml /usr/share/images/desktop-base/joy.xml
+    # remove desktop-background.xml alternatives
+    for desktopbackground in \
+          lines.xml \
+          joy.xml \
+          ; do
+        update-alternatives --remove desktop-background.xml /usr/share/images/desktop-base/$desktopbackground
+    done
 
     # remove splash alternatives
     for splash in \
